--- a/sass/index.scss
+++ b/sass/index.scss
@@ -224,7 +224,7 @@ body{
         }
         form{
             input{
-                max-width: 471px;
+                max-width: 471px !important;
                 margin-left: 12px;
             }
             button{
