--- a/sass/index.scss
+++ b/sass/index.scss
@@ -226,6 +226,7 @@ body{
             input{
                 max-width: 471px !important;
                 margin-left: 12px;
+                margin-right: 12px;
             }
             button{
                 width: 155px !important;
