--- a/sass/index.scss
+++ b/sass/index.scss
@@ -223,10 +223,10 @@ body{
             color: $white !important;  
         }
         form{
+            padding-right: 12px;
             input{
                 max-width: 471px !important;
                 margin-left: 12px;
-                margin-right: 12px;
             }
             button{
                 width: 155px !important;
